[gd_scene load_steps=2 format=3 uid="uid://svmj3rp3ebyq"]

[ext_resource type="Script" path="res://scripts/entities/abilities/ability_executor.gd" id="1_xyxmn"]

[node name="Ability" type="Node3D"]
script = ExtResource("1_xyxmn")

[node name="ActivateSFXPlayer" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[node name="ActiveDurationTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="ActiveDurationTimer" to="." method="_on_active_duration_timer_timeout"]
